--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -13,6 +13,6 @@ doctrine:
             App:
                 is_bundle: false
                 type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
+                dir: '%kernel.project_dir%/src/Domain/Model'
                 prefix: 'App\Entity'
                 alias: App
